# photo-tagger

./: .gitignore  Cargo.toml  README.md
docs/plans/: 2026-02-12-activity-folders-auto.md  2026-02-12-activity-folders.md  2026-02-12-material-mode-design.md  2026-02-12-material-mode-implementation.md  2026-02-12-object-bbox-design.md  2026-02-12-object-bbox-implementation.md
src/: domain.rs  fs_ops.rs  lib.rs  main.rs  material.rs
