[package]
name = "photo-tagger"
version = "0.1.0"
edition = "2021"
description = "Classify construction site photos using Gemini Flash AI"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
