[package]
name = "photo-tagger"
version = "0.2.0"
edition = "2021"
description = "Classify construction site photos using Gemini Flash AI"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
cli-ai-analyzer = { path = "../cli-ai-analyzer" }
anyhow = "1"
