[package]
name = "photo-tagger"
version = "0.2.0"
edition = "2021"
description = "Classify construction site photos using Gemini Flash AI"

[lib]
name = "photo_tagger"
path = "src/lib.rs"

[[bin]]
name = "photo-tagger"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
cli-ai-analyzer = { path = "../cli-ai-analyzer" }
anyhow = "1"
csv = "1.3"

[dev-dependencies]
tempfile = "3"
